# microlog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: simple_example.py
examples/otel/: README.md  docker-compose.yaml
examples/otel/app/: Dockerfile  main.py
examples/otel_example/: README.md  collector-config.yaml  docker-compose.yaml
examples/otel_example/app/: Dockerfile  main.py  requirements.txt
examples/otel_example/grafana/dashboards/: microlog_logs.json
examples/otel_example/grafana/provisioning/dashboards/: dashboard.yaml
examples/otel_example/grafana/provisioning/datasources/: datasource.yaml
examples/simple/: simple_example.py
microlog/: __init__.py  adapter.py  config.py  logger.py
microlog/types/chz/: __init__.pyi
microlog/types/pytest/: __init__.pyi
tests/: conftest.py  test_config.py  test_logger.py
